--- a/unit_1/css/main.css
+++ b/unit_1/css/main.css
@@ -1,3 +1,7 @@
-body {background-color: blue;}
+h1, h3 {font-family: Ariel, sans-serif;}
 
-h1, p {color: yellow;}
+h1 {color: white;}
+
+body {background-color: #336BE8;}
+
+p {font-family: Courier New, monospace;}
